# CAD

./: .deepsource.toml  .dockerignore  .env  .env.dev  .env.prod  .env.prod.db  .gitignore  Dockerfile  Dockerfile.prod  README.md  build.sh  build_prod.sh  compress_logs.sh  devup.sh  docker-compose.prod.yml  docker-compose.yml  env.dev.sh  env.prod.sh  manage.py  pyproject.toml  requirements.txt  setup.cfg  source.sh  test.py
.github/workflows/: deploy.yml  main.yml
administration/: api_endpoints.py  api_urls.py  apps.py  forms.py  tests.py  urls.py  utils.py  views.py
administration/templates/: UserRequestModal.html  admin.html  articlesAdmin.html  courses.html  mailsAdmin.html  mailsAdminCreate.html  message_admin_view.html  message_list.html  request_user_card.html  request_user_card_closed.html  requestsAdmin.html  student_request_section.html  transactions.html  userAdmin.html  userAdmintest.html  user_admin_view.html  user_list.html
administration/templatetags/: relation.py
cad/: api_urls.py  settings.py  urls.py  views.py  wsgi.py
connexion/: urls.py  views.py
default/: admin.py  apps.py  forms.py  models.py  sitemap.py  urls.py  views.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
groups/: apps.py  urls.py  views.py
inscription/: apps.py  decorators.py  urls.py  utils.py  views.py
misc/: CAD.drawio
nginx/: Dockerfile.dev  nginx.conf
old_site/: apps.py  urls.py  views.py
users/: admin.py  api_endpoints.py  api_urls.py  apps.py  autocomplete.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
(+199 files in other folders)
